completed documentation for Faq Api
