# app/Http/Controllers/Api/Faqs/FaqController.php
@@ -110,6 +110,7 @@ class FaqController extends Controller
 
 // FN: store
 /**
+ *
  * @OA\Post(
  *      path="/faqs",
  *      operationId="storeFaq",
@@ -202,6 +203,223 @@ class FaqController extends Controller
  *                      )
  *                  ),
  *              )
+ *          )
+ *      ),
+ * )
+ */
+
+
+// FN : show
+/**
+ * @OA\Get(
+ *      path="/faqs/{slug}",
+ *      operationId="getFaqById",
+ *      tags={"Faqs"},
+ *      summary="Return specific Faq",
+ * 		security={{"bearerAuth": {}}},
+ *
+ * 		@OA\Parameter(
+ *          name="slug",
+ *          description="Pass Faq Slug",
+ *          required=true,
+ *          in="path",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),
+ *
+ *      @OA\Response(
+ *          response=200,
+ *          description="Successful operation",
+ *          @OA\MediaType(
+ *              mediaType="application/json",
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=400,
+ *          description="Bad Request"
+ *      ),
+ *      @OA\Response(
+ *          response=401,
+ *          description="Unauthenticated",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="Unauthenticated."),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=403,
+ *          description="Forbidden",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="This action is unauthorized."),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=404,
+ *          description="Not Found",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="ID is not found."),
+ *          )
+ *      ),
+ * )
+ */
+
+// FN : update
+/**
+ * @OA\Put(
+ *     path="/faqs/{id}",
+ *      operationId="updateFaq",
+ *      tags={"Faqs"},
+ *      summary="Update existing Faq",
+ *      security={{"bearerAuth": {}}},
+ *
+ *      @OA\Parameter(
+ *          name="id",
+ *          description="Faq ID",
+ *          required=true,
+ *          in="path",
+ *          @OA\Schema(
+ *              type="integer",
+ *              format="int64"
+ *          )
+ *      ),
+ *
+ *      @OA\RequestBody(
+ *          required=true,
+ *          description = "Update Faq",
+ *          @OA\JsonContent(
+ *              title="Update faq request",
+ *              description="Faq request body",
+ *              type="object",
+ *              required={"question","answer"},
+ *              @OA\Property(
+ *                  property="question",
+ *                  description="Question",
+ *                  example="Test question",
+ *                  type="string"
+ *              ),
+ *              @OA\Property(
+ *                  property="answer",
+ *                  description="Answer",
+ *                  example="Test answer",
+ *                  type="string"
+ *              ),
+ *          ),
+ *      ),
+ *
+ *      @OA\Response(
+ *          response=202,
+ *          description="Success",
+ *          @OA\MediaType(
+ *              mediaType="application/json",
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=400,
+ *          description="Bad Request"
+ *      ),
+ *      @OA\Response(
+ *          response=401,
+ *          description="Unauthenticated",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="Unauthenticated."),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=403,
+ *          description="Forbidden",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="This action is unauthorized."),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=404,
+ *          description="Not Found",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="ID is not found."),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=422,
+ *          description="Unprocessable Entity(Validation errors)",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="The given data was invalid."),
+ *              @OA\Property(
+ *                  property="errors",
+ *                  type="object",
+ *                  @OA\Property(
+ *                      property="title",
+ *                      type="array",
+ *                      collectionFormat="multi",
+ *                      @OA\Items(
+ *                          type="string",
+ *                          example="The title field is required.",
+ *                      )
+ *                  ),
+ *              )
+ *          )
+ *      ),
+ * )
+ */
+
+// FN : delete
+/**
+ * @OA\Delete(
+ *      path="/faqs/{id}",
+ *      operationId="deleteFaq",
+ *      tags={"Faqs"},
+ *      summary="Delete existing Faq",
+ *      description="Deletes a record and returns no content",
+ *      security={{"bearerAuth": {}}},
+ *      @OA\Parameter(
+ *          name="id",
+ *          description="Faq Id",
+ *          required=true,
+ *          in="path",
+ *          @OA\Schema(
+ *              type="integer",
+ *              format="int64"
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=200,
+ *          description="Successful operation",
+ *          @OA\MediaType(
+ *              mediaType="application/json",
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=400,
+ *          description="Bad Request"
+ *      ),
+ *      @OA\Response(
+ *          response=401,
+ *          description="Unauthenticated",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="Unauthenticated."),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=403,
+ *          description="Forbidden",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="This action is unauthorized."),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=404,
+ *          description="Not Found",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="string", example=false),
+ *              @OA\Property(property="message", type="string", example="ID is not found."),
  *          )
  *      ),
  * )
